compiler-core/src/go/tests/snapshots/gleam_core__go__tests__blocks__block_returning_bool.snap
---
source: compiler-core/src/go/tests/blocks.rs
expression: "\npub fn go() -> Bool {\n  { True && False }\n}\n"
---
----- SOURCE CODE

pub fn go() -> Bool {
  { True && False }
}


----- COMPILED GO
package thepackage

func Go() bool {
  return (func() bool {
    return (true && false)
  }())
}
