compiler-core/src/go/tests/snapshots/gleam_core__go__tests__blocks__simple_block.snap
---
source: compiler-core/src/go/tests/blocks.rs
expression: "\npub fn go() -> Int {\n  let x = { 1 + 2 }\n  x\n}\n"
---
----- SOURCE CODE

pub fn go() -> Int {
  let x = { 1 + 2 }
  x
}


----- COMPILED GO
package thepackage

func Go() int64 {
  x := (func() int64 {
    return (int64(1) + int64(2))
  }())
  _ = x
  return x
}
